refactor order creation logic with price and currency attributes